Changelog of Jail

1.0.0
- Added jailinfo command, allows admins to obtain a jail's information
- Added prisonerinfo command, allows admins to obtain a prisoner's information
- Prisoners' force jail TP now only occurs upon Δs(displacement change)
- Fixed config key 'check-UUID' being ignored by the code

Alpha0.3.4
- Fixed error when allow-chat=true & allow-command=false #18
- Fixed all errors caused by name case detections #16 #18 #15

Alpha0.3.3
- Fixed error in console when a jailed player joins
- Fixed BlockPlacer not resetting the whole mine
- Fixed non-jailed players get kicked upon second join

Alpha0.3.2
- Fixed player-UUIDs checked with incorrect data-type

Alpha0.3.1
- API updated, should support the latest PocketMine build
- Fixed error message popping when a player who's jailed forever joins
- Fixed player-UUID incorrectly saved

Alpha0.3.0
- Implemented Mining-For-Money-For-Bailing feature! (Tutorial soon)
- Fixed newly joined players all being jailed bug #10
- Fixed console popping errors of isJailed()-error bug #10
- Added support for EconomyPlus (Prisoner bail function)
- Added support for individual jail's bail status(Allow bailing or not)
- Default time unit is now customizable in configuration file
- Implemented sign support: 1st line: [Bail] [ResetMine] [SellHand]
- Fixed some messages not converted from their keys
- Prisoners' gamemode will be set to 0 instead of 2
- Added 'jail.modify.bypass' perm-node (detail in plugin.yml)
- Fixed block-break detection (warning broadcasting issue)
- Fixed player-escape-warning overlapping the timer GUI
- Implemented prisoner inventory saver
- Fixed a word misspell in lang_zh.json
- Database support! (Jails.yml data backup)
Technical updates:
- Code cleanup - Removed unused code
- Added an interface class for Jail's API
- Bumped to PocketMine API 3.0.0-ALPHA1 (Older APIs compatible)
- Different sign types are checked with individual listeners
- Signs positioning technology enhancement
New commands: